feat: spo voting
