# api/src/main/java/org/cardanofoundation/rosetta/api/construction/service/CardanoConstructionServiceImpl.java
@@ -33,10 +33,14 @@ import com.bloxbean.cardano.client.exception.CborDeserializationException;
 import com.bloxbean.cardano.client.exception.CborSerializationException;
 import com.bloxbean.cardano.client.transaction.spec.*;
 import com.bloxbean.cardano.client.transaction.spec.TransactionBody.TransactionBodyBuilder;
+import com.bloxbean.cardano.client.transaction.spec.governance.Anchor;
+import com.bloxbean.cardano.client.transaction.spec.governance.VotingProcedure;
+import com.bloxbean.cardano.client.transaction.spec.governance.VotingProcedures;
 import com.bloxbean.cardano.client.util.HexUtil;
 import org.apache.commons.lang3.ObjectUtils;
 import org.openapitools.client.model.*;
 
+import org.cardanofoundation.rosetta.api.block.model.domain.GovernanceVote;
 import org.cardanofoundation.rosetta.api.block.model.domain.ProcessOperations;
 import org.cardanofoundation.rosetta.api.block.model.domain.ProcessOperationsReturn;
 import org.cardanofoundation.rosetta.api.block.model.domain.ProtocolParams;
@@ -301,9 +305,9 @@ public class CardanoConstructionServiceImpl implements CardanoConstructionServic
   }
 
   public UnsignedTransaction createUnsignedTransaction(Network network,
-                                                        List<Operation> operations,
-                                                        long ttl,
-                                                        Long calculatedFee) throws CborSerializationException, CborException, AddressExcepion {
+                                                       List<Operation> operations,
+                                                       long ttl,
+                                                       Long calculatedFee) throws CborSerializationException, CborException, AddressExcepion {
     log.info(
             "[createUnsignedTransaction] About to create an unsigned transaction with {} operations",
             operations.size());
@@ -330,6 +334,33 @@ public class CardanoConstructionServiceImpl implements CardanoConstructionServic
     if (!CollectionUtils.isEmpty(opRetDto.getWithdrawals())) {
       transactionBodyBuilder.withdrawals(opRetDto.getWithdrawals());
     }
+    if (!opRetDto.getGovernanceVotes().isEmpty()) {
+      VotingProcedures votingProcedures = new VotingProcedures();
+
+      for (GovernanceVote governanceVote : opRetDto.getGovernanceVotes()) {
+        log.info("[createUnsignedTransaction] Processing governance vote: {}",
+                governanceVote.getGovActionId());
+
+        VotingProcedure.VotingProcedureBuilder votingProcedureBuilder = VotingProcedure.builder();
+
+        votingProcedureBuilder
+                .vote(governanceVote.getVote());
+
+        if (governanceVote.getAnchor()!= null) {
+          Anchor anchor = governanceVote.getAnchor();
+
+          votingProcedureBuilder.anchor(com.bloxbean.cardano.client.transaction.spec.governance.Anchor.builder()
+                  .anchorDataHash(anchor.getAnchorDataHash())
+                  .anchorUrl(anchor.getAnchorUrl())
+                  .build());
+        }
+
+        votingProcedures.add(governanceVote.getVoter(), governanceVote.getGovActionId(), votingProcedureBuilder.build());
+      }
+
+      transactionBodyBuilder.votingProcedures(votingProcedures);
+    }
+
     transactionBodyBuilder.fee(BigInteger.valueOf(calculatedFee));
 
     TransactionBody transactionBody = transactionBodyBuilder.build();
@@ -400,6 +431,7 @@ public class CardanoConstructionServiceImpl implements CardanoConstructionServic
     processOperationsDto.setTransactionInputs(result.getTransactionInputs());
     processOperationsDto.setTransactionOutputs(result.getTransactionOutputs());
     processOperationsDto.setCertificates(result.getCertificates());
+    processOperationsDto.setGovernanceVotes(result.getGovernanceVotes());
     processOperationsDto.setWithdrawals(result.getWithdrawals());
     Set<String> addresses = new HashSet<>(result.getAddresses());
     processOperationsDto.setAddresses(addresses);
